Just supress original exception; don't also suppress that original's suppressed